add favicon + meta description

--- a/public/index.html
+++ b/public/index.html
@@ -6,22 +6,22 @@
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     <meta name="theme-color" content="#000000" />
     <meta name="description"
-      content="Landy is a free React landing page template designed for developers and startups." />
+      content="Nous nous proposons de créer de la valeur en apportant une réponse pertinente à la reconfiguration du commerce de centre-ville." />
     <meta name="keywords"
-      content="Landy is a free React landing page template designed for developers and startups." />
-    <meta property="og:title" content="Landy - React Template" />
+      content="Nous nous proposons de créer de la valeur en apportant une réponse pertinente à la reconfiguration du commerce de centre-ville." />
+    <meta property="og:title" content="Conjonction - L'héritage d'une foncière..." />
     <meta property="og:type" content="website" />
-    <meta property="og:url" content="https://landy.website/" />
+    <meta property="og:url" content="https://conjonction.com/" />
     <meta property="og:description"
-      content="Landy is a free React landing page template designed for developers and startups." />
+      content="Nous nous proposons de créer de la valeur en apportant une réponse pertinente à la reconfiguration du commerce de centre-ville." />
     <meta name="robots" content="index, follow" />
     <meta property="og:locale" content="en_EN" />
-    <meta property="og:site_name" content="Landy" />
-    <meta property="og:url" content="https://landy.website/" />
-    <meta property="twitter:title" content="Landy - React Template" />
+    <meta property="og:site_name" content="Conjonction" />
+    <meta property="og:url" content="https://conjonction.com/" />
+    <meta property="twitter:title" content="Conjonction - L'héritage d'une foncière..." />
     <meta property="twitter:description"
-      content="Landy is a free React landing page template designed for developers and startups." />
-    <meta property="twitter:site" content="https://landy.website/" />
+      content="Nous nous proposons de créer de la valeur en apportant une réponse pertinente à la reconfiguration du commerce de centre-ville." />
+    <meta property="twitter:site" content="https://conjonction.com/" />
     <link href="https://fonts.googleapis.com/css2?family=Ubuntu:wght@400;500;700&display=swap" rel="stylesheet" async />
     <link rel="preconnect" href="https://fonts.gstatic.com">
     <link href="https://fonts.googleapis.com/css2?family=Playfair+Display&display=swap" rel="stylesheet">
