add page incubateur + isotope filter

--- a/public/index.html
+++ b/public/index.html
@@ -15,7 +15,7 @@
     <meta property="og:description"
       content="Nous nous proposons de créer de la valeur en apportant une réponse pertinente à la reconfiguration du commerce de centre-ville." />
     <meta name="robots" content="index, follow" />
-    <meta property="og:locale" content="en_EN" />
+    <meta property="og:locale" content="fr_FR" />
     <meta property="og:site_name" content="Conjonction" />
     <meta property="og:url" content="https://conjonction.com/" />
     <meta property="twitter:title" content="Conjonction - L'héritage d'une foncière..." />
